<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.bsc.langgraph4j</groupId>
    <artifactId>langgraph4j-ag-ui-parent</artifactId>
    <version>0.2.0-beta1</version>
    <packaging>pom</packaging>

    <name>langgraph4j::ag-ui::parent</name>
    <description>Langgraph4j integrate AG-UI protocol</description>

    <url>https://github.com/langgraph4j/langgraph4j-copilotkit</url>
    <licenses>
        <license>
            <name>MIT</name>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>bsorrentino</name>
            <email>bartolomeo.sorrentino@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/langgraph4j/langgraph4j-copilotkit.git</connection>
        <developerConnection>scm:git: https://github.com/langgraph4j/langgraph4j-copilotkit.git</developerConnection>
        <url>https://github.com/langgraph4j/langgraph4j-copilotkit</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/langgraph4j/langgraph4j-copilotkit/issues</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <ag-ui.version>0.1.0</ag-ui.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.bsc.langgraph4j</groupId>
                <artifactId>langgraph4j-bom</artifactId>
                <version>1.9.0-beta6</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.13.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>


    <dependencies>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>sonatype-central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>published</waitUntil>
                </configuration>
            </plugin>

        </plugins>


    </build>

    <modules>
        <module>langgraph4j-ag-ui-sdk</module>
        <module>langgraph4j-ag-ui-json</module>
    </modules>

    <profiles>
        <profile>
            <id>agui</id>
            <modules>
                <module>ag-ui/sdks/community/java/ag-ui</module>
                <module>langgraph4j-ag-ui-sdk</module>
                <module>langgraph4j-ag-ui-json</module>
            </modules>
        </profile>
        <profile>
            <id>release</id>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <keyname>bartolomeo.sorrentino@gmail.com</keyname>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>

        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>sonatype-central</id>
            <name>sonatype snapshots</name>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

</project>